<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csi2_23.examenfinal.DetallesFragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fondo_alert">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_dialog_info"
                    android:id="@+id/imgFrag"
                    android:layout_weight="0.2" />

                <TextView
                    android:text="@string/txtFragTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtFragTitulo"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtFragTitId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtFragTitId"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/txtFragId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="#Id"
                    android:background="@color/fondo_alert2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtFragTitFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/txtFragTitFecha"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/txtFragFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="#Fecha"
                    android:background="@color/fondo_alert2" />

                <TextView
                    android:id="@+id/txtFragTitHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/txtFragTitHora"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/txtFragHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="#Hora"
                    android:background="@color/fondo_alert2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtFragTitTexto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/txtFragTitTexto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/txtFragTexto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="#Texto"
                    android:background="@color/fondo_alert2" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtFragTitComentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtFragTitComentario"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:text="#Comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtFragComentario"
                android:background="@color/fondo_alert2" />

            <Button
                android:text="@string/txtFragOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnFragOk"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
